--- a/build.xml
+++ b/build.xml
@@ -31,6 +31,7 @@
       <include name="components/**/*.*"/>
       <include name="modules/**/*.*"/>
       <include name="chrome/icons/**/*.*"/>
+      <include name="chrome/button.js"/>
       <exclude name="build.number"/>
     </patternset>
     <patternset id="excludespatternset">
