Add patterns for patch files
--HG--
branch : bug24045

--- a/build.xml
+++ b/build.xml
@@ -38,6 +38,8 @@
       <exclude name="**/Thumbs.db"/>
       <exclude name="**/*.idl"/>
       <exclude name="**/*.orig"/>
+      <exclude name="**/*.patch"/>
+      <exclude name="**/*.rej"/>
       <exclude name="**/.*"/>
     </patternset>
     <buildnumber/>
